# cli-client-generator

./: README.md  pyproject.toml
ab_client_generator/: cli.py
src/ab_client_generator/: cli.py
src/obo_client_generator/: cli.py  token_validator_openapi.json
tests/ab_client_generator/: test_cli.py
tests/obo_client_generator/: test_cli.py
