[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "ab-test-fixtures>=0.1.5,<0.2.0",
  "debugpy>=1.8.14,<2",
  "isort>=6.0.1,<7",
  "pre-commit>=4.2.0,<5",
  "pytest-asyncio>=1.0.0,<2",
  "pytest-cov>=6.2.1,<7",
  "pytest>=8.4.1,<9",
  "ruff>=0.12.3,<0.13",
  "tox>=4.27.0,<5"
]

[project]
authors = [{email = "53892067+mattcoulter7@users.noreply.github.com", name = "Matthew Coulter"}]
dependencies = [
  "ab-openapi-python-generator>=2.1.4",
  "ab-auth-client-service",
  "ab-token-validator-service",
  "ab-user-service",
  "ab-token-issuer-service",
  "ab-token-issuer-store-service",
  "ab-token-store-service",
  "fastapi>=0.115.14,<0.116",
  "typer>=0.16.0,<0.17",
]
description = ""
name = "ab-client-generator"
readme = "README.md"
requires-python = ">=3.12, <4"
version = "0.2.0"

[project.scripts]
cli = "ab_client_generator.cli:app"

[tool.hatch.build.targets.sdist]
include = ["ab_client_generator"]

[tool.hatch.build.targets.wheel]
include = ["ab_client_generator"]

[tool.hatch.build.targets.wheel.sources]
"ab_client_generator" = "ab_client_generator"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
markers = [
  "integration: Assigns the test to the integration test suite.",
  "regression: Assigns the test to the regression test suite"
]

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
exclude = [".git", ".venv", "__pycache__", "proto"]
fixable = ["ALL"]
ignore = [
  "D104" # missing docstring in public package
]
select = [
  "ARG001", # unused arguments
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # pydocstyle (docstring checks)
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "W" # pycodestyle warnings
]
